welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: '(' expected but '{' found.
  else if {
          ^SlugHunting:11: error: illegal start of simple expression
}
^